welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if((isMorning==true) && (isMom==false)){
    return false
  }
    return true
  	if(isAsleep==true && isMom==false && isMorning==false){
    	return false  
  	}
  
  if(isAsleep==true){
    return false
  }
  
}